@@ -1,8 +1,9 @@
 apport (0.83) UNRELEASED; urgency=low
 
   * apport/crashdb.py: Separate abstract from implemented functions.
+  * apport/crashdb.py: Add method interfaces for crash duplicate detection.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 12:04:42 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 13:22:57 +0200
 
 apport (0.82) gutsy; urgency=low
 
